Add atlas-orca to dependency_tree

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -7,6 +7,13 @@ atlas:
   deps:
     - eckit
     - fckit
+    
+atlas-orca:
+  type: cmake
+  master_branch: master
+  develop_branch: develop
+  deps:
+    - atlas
 
 cfgrib:
   type: python
