--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -57,6 +57,9 @@ name: downstream-ci-hpc
       infero:
         required: false
         type: string
+      kronos:
+        required: false
+        type: string
       metkit:
         required: false
         type: string
