Set multio test parallelism

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -154,6 +154,8 @@ multio:
   type: cmake
   master_branch: master
   develop_branch: develop
+  env:
+    CTEST_PARALLEL_LEVEL: 1
   deps:
     - atlas
     - eccodes
