--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -661,6 +661,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: ${{ needs.setup.outputs.eccodes-python }}
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         requirements_path: ci/requirements-tests.in
@@ -707,6 +708,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: |-
           ${{ needs.setup.outputs.earthkit-data }}
           ${{ needs.setup.outputs.cfgrib }}
@@ -761,6 +763,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: |-
           ${{ needs.setup.outputs.cfgrib }}
           ${{ needs.setup.outputs.multiurl }}
@@ -891,6 +894,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: ''
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
@@ -1226,6 +1230,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: ${{ needs.setup.outputs.eccodes-python }}
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         requirements_path: tests/downstream-ci-requirements.txt
@@ -1300,6 +1305,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: ''
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
@@ -1334,6 +1340,7 @@ jobs:
     - uses: ecmwf-actions/reusable-workflows/ci-python@v2
       with:
         lib_path: ${{ steps.build-deps.outputs.lib_path }}
+        bin_paths: ${{ steps.build-deps.outputs.bin_paths }}
         python_dependencies: ''
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
