--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -921,6 +921,7 @@ jobs:
         github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
         codecov_token: ${{ secrets.CODECOV_UPLOAD_TOKEN }}
         codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
+        python_version: '3.10'
   ecflow-light:
     name: ecflow-light
     needs:
