earthkit-time: Run pytest using `python -m pytest`
When using `pytest` directly, pytest cannot import `earthkit.time.*` because it
is trying to import `time.*` which fails since `time` is a built-in module.
This alongside the `consider_namespace_packages` option solves the issue.

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -71,6 +71,9 @@ earthkit-time:
   master_branch: main
   downstream-ci:
     config_path: ""
+    test_cmd: |
+      python -m pytest --cov=./ --cov-report=xml
+      python -m coverage report
 
 ecbuild:
   type: cmake
