earthkkit-data-using-toml-deps

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -26,7 +26,7 @@ cfgrib:
 earthkit:
   type: python
   master_branch: main
-  requirements_path: tests/downstream-ci-requirements.txt
+  toml_opt_dep_sections: all,test,ci
   downstream-ci:
     test_cmd: |
       _EKD_DIR=$(pwd) && cd .. && python -m pytest ${_EKD_DIR} -vv --cov=. --cov-report=html && cd -
