Test earthkit-data on hpc-dev

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -671,7 +671,7 @@ jobs:
     runs-on:
     - self-hosted
     - linux
-    - hpc
+    - hpc-dev
     steps:
     - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
       with:
