--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -39,7 +39,7 @@ earthkit:
 earthkit-data:
   type: python
   master_branch: main
-  toml_opt_dep_sections: all,test,ci
+  # toml_opt_dep_sections: all,test,ci
   deps:
     - cfgrib
     - multiurl
