Update dependency tree with covjsonkit

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -276,3 +276,9 @@ cascade:
   master_branch: main
   downstream-ci:
     config_path: ""
+
+covjsonkit:
+  type: python
+  master_branch: main
+  downstream-ci:
+    config_path: ""
