--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -61,6 +61,7 @@ anemoi-datasets:
     - earthkit-geo
     - earthkit-meteo
   downstream-ci:
+    RUNNER_TYPE: "self-hosted" 
     test_cmd: |
       python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
       python -m coverage report
