--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -87,6 +87,7 @@ anemoi-utils:
   master_branch: main
   toml_opt_dep_sections: all,test
   downstream-ci:
+    config_path: ""
     test_cmd: |
       python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
       python -m coverage report
