--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -107,6 +107,18 @@ anemoi-utils:
       python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
       python -m coverage report
 
+anemoi-graphs:
+  type: python
+  master_branch: main
+  toml_opt_dep_sections: all,test
+  deps:
+    - anemoi-datasets
+    - anemoi-utils
+  downstream-ci:
+    test_cmd: |
+      python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+      python -m coverage report
+
 ecbuild:
   type: cmake
   input: false
