--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -119,6 +119,17 @@ anemoi-graphs:
       python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
       python -m coverage report
 
+anemoi-models:
+  type: python
+  master_branch: main
+  toml_opt_dep_sections: all,tests
+  deps:
+    - anemoi-utils
+  downstream-ci:
+    test_cmd: |
+      python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+      python -m coverage report
+
 ecbuild:
   type: cmake
   input: false
