--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -130,6 +130,20 @@ anemoi-models:
       python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
       python -m coverage report
 
+anemoi-training:
+  type: python
+  master_branch: main
+  toml_opt_dep_sections: all,tests
+  deps:
+    - anemoi-utils
+    - anemoi-models
+    - anemoi-datasets
+    - anemoi-graphs
+  downstream-ci:
+    test_cmd: |
+      python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+      python -m coverage report
+
 ecbuild:
   type: cmake
   input: false
