Update earthkit dependencies

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -35,6 +35,8 @@ earthkit:
     - earthkit-geo
     - earthkit-meteo
     - earthkit-regrid
+    - earthkit-plots
+    - earthkit-transforms
 
 earthkit-data:
   type: python
