--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -389,7 +389,7 @@ danu:
   master_branch: main
   requirements_path: requirements.txt
   test_cmd: "python -m pytest"
-  conda_deps: numpy scipy pcraster gdal netCDF4 pandas dask lz4 eccodes magics
+  conda_deps: "'numpy<2' scipy pcraster gdal netCDF4 pandas dask lz4 eccodes magics"
   downstream-ci:
     config_path: ""
   downstream-ci-hpc:
