--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -82,6 +82,14 @@ earthkit-time:
       python -m pytest --cov=./ --cov-report=xml
       python -m coverage report
 
+earthkit-hydro:
+  type: python
+  master_branch: main
+  toml_opt_dep_sections: all
+  private: true
+  downstream-ci:
+    config_path: ""
+
 anemoi-datasets:
   type: python
   master_branch: main
