add ekd as a dep

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -87,6 +87,8 @@ earthkit-hydro:
   master_branch: main
   toml_opt_dep_sections: all
   private: true
+  deps:
+    - earthkit-data
   downstream-ci:
     config_path: ""
 
