--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -184,6 +184,7 @@ anemoi-inference:
 cascade:
   type: python
   master_branch: main
+  toml_opt_dep_sections: tests
   downstream-ci:
     config_path: ""
 
