Add earthkit-data as dependency

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -187,6 +187,8 @@ cascade:
   toml_opt_dep_sections: tests
   downstream-ci:
     config_path: ""
+  deps:
+    - earthkit-data
 
 conflator:
   type: python
